# fluentqa-pydaily

./: .gitignore  CODEOWNER  README.md  ToDoList.md  conftest.py  create-docs.sh  docusaurus.config.js  init-project.sh  mkdocs.yml  package.json  pyproject.toml  pytest.ini  update_project.sh
api-spell/: .gitignore  README.md  pyproject.toml  settings.toml
api-spell/config/: .env  additional_settings.toml  more_settings.toml
api-spell/docs/: config.md  ioc.md  reference.md
api-spell/spell/: clogger.py  config.py
api-spell/spell/ioc/: __init__.py  container.py  exceptions.py  params_resolver.py
api-spell/tests/: test_api_spell.py  test_container.py
backup/: main.py  pyproject.toml
backup/2048/: README.md  ui.py
backup/docker/: DockerFileTemplate  Dockerfile_todo
backup/docs-orign/: README.md  easyocr.md  intro.md  resouces.md  resource.yaml  ui-overview.md
backup/funny/: python-way.md  timed_fun.py
backup/notification/: email_sender.py
backup/pyapi-lessons/: alembic.ini  main.py  pyproject.toml  run.sh
backup/pyapi-lessons/core/: base_repo.py  config.py  contexts.py  db.py  pyapi_settings.py
backup/pyapi-lessons/migrations/: env.py
backup/pyapi-lessons/migrations/versions/: 165d757d6680_message.py  9bf224b5ecb8_message.py
backup/pyapi-lessons/pyapi/: __init__.py  pyapi_logger.py
backup/pyapi-lessons/pyapi/todo/api/: __init__.py  task.py
backup/pyapi-lessons/pyapi/todo/entity/: task.py
backup/pyapi-lessons/tests/: test_pyapi_lessons.py
backup/tests/: conftest.py  test_classproperty_meta.py  test_translators.py
docker/: docker-compose.yaml
docs/: index.md  project-setup.md  resouces.md
docs-orign/: ToDoList.md  introduction.md  resource.yaml
docs-orign/1-project-setup/: index.md
docs-orign/100-advanced-libs/: index.md
docs-orign/3-ioc-in-python/: ioc-in-python.md
docs-orign/api-design/: 1-stoplight-intro.md
docs-orign/generator/: openapi-generator.md  run-docker.sh
docs/1-project-setup/: index.md  init_project.sh
docs/2-deep-translator/: 1-deep-translator.md
docs/contribute/: index.md
docs/environment/: 1-python-environment.md
docs/more-py-for-qa/: python-modules.md
docs/server/: 1-todo-api.md
pyapi-lessons/: reference.yaml
pyapi-lessons/routers/: api.py
pyapi-lessons/todo-ui/: components.d.ts  index.html
pycore-lessons/: .env
pycore-lessons/classproperty_demo/: __init__.py  classproperty_meta.py
pycore-lessons/code_generator_demo/: model_generator.py
pycore-lessons/ioc_more/: container.py
pycore-lessons/more_classes/: module_class_demo.py
pycore-lessons/patterns/: service_manager.py
pydaily/: __init__.py
pydaily/2048/: colors.py
pydaily/functions_server/: models.py
pydaily/ioc_demo/: db_request.py  ioc_container.py  modules.py
pydaily/ioc_more/: __init__.py
pydaily/more_dicts/: __init__.py  box_examples.py
pydaily/patterns/: service_manager.py
pyqa-daily/: README.md  Usages.md  alternative.json  package.json  pnpm-lock.yaml  tsconfig.json
pyqa-daily/src/: App.vue
pyserver_simplify/: CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml
pyserver_simplify/docker/: Dockerfile  README.md
pyserver_simplify/pyserver_simplify/: __init__.py
pyserver_simplify/tests/: test_hello.py
pytips/: reference.yaml
pytips-lessons/config/: .secrets.toml
pytips-lessons/config_demo/: config.py  run_dynaconf.sh
pytips-lessons/git_tips_demo/: update_changelog.py
pytips-lessons/ioc_more/: errors.py
pytips/code_generator_demo/: field.json
pytips/inspect_demo/: inspect_usage.py
pytips/more_classes/: factory_demo.py
pytips/more_dicts/: dict_demo.py
pytips/patterns/: service_manager.py
pytips/pluggy_demo/: __init__.py
pytips/pydantic_demo/: orm_demo.py
pytips/pyinvocation_demo/: __init__.py
qpython_daily/: .env  .gitignore  README.md  pyproject.toml  settings.toml
qpython_daily/.github/: PULL_REQUEST_TEMPLATE.md
qpython_daily/fluentcli/: CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
qpython_daily/fluentcli/.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
qpython_daily/fluentcli/.github/ISSUE_TEMPLATE/: question.md
qpython_daily/fluentcli/docker/: README.md
qpython_daily/fluentcli/docs/: index.md
qpython_daily/fluentcli/fluentcli/: __init__.py  celo_cli.py  greet.py  typer_cli.py
qpython_daily/fluentcli/fluentcli/cleo_demo/: cleo_command.py
qpython_daily/fluentcli/fluentcli/typer_demo/: typer_command.py
qpython_daily/fluentcli/tests/: test_greeting.py  test_hello.py
qpython_daily/fluentqa_app/: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  cookiecutter-config-file.yml  docker-compose.yaml  pyproject.toml
qpython_daily/pydaily/: CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml
qpython_daily/qpython_daily/: __init__.py  typecli_main.py
qpython_daily/tests/: conftest.py  test_hello.py  test_qconfig.py  test_typercli_main.py
specs/public-data/: README.md  public-data.json
specs/todo/: todo-v2.yaml  todo-v3.yaml
tests/: readme.md  test_classproperty_meta.py  test_pypro_templates.py  test_translators.py
website/: package-lock.json  tsconfig.json
(+276 files in other folders)
