[tool.poetry]
name = "pyapi-lessons"
version = "0.1.0"
description = ""
authors = ["named"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
injector = "^0.19.0"
SQLAlchemy = "^1.4.36"
app = "^0.0.1"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
