# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fluentcli"
version = "0.1.0"
description = "Awesome `fluentcli` is a Python cli/package "
readme = "README.md"
authors = ["fluentcli <hello@fluentcli.com>"]
license = "MIT"
repository = "https://github.com/fluentcli/fluentcli"
homepage = "https://github.com/fluentcli/fluentcli"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]



[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"
arrow = "^1.2.3"
cleo = "^0.8.1"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
greet = "fluentcli.greet:cli"
cgreet = "fluentcli.celo_cli:main"
tgreet = "fluentcli.typer_cli:main"

